--- a/index.html
+++ b/index.html
@@ -55,20 +55,30 @@
     <!--menu -->
         <div class="container">
             <div class="row menu">
-                <div class="col-sm-2 menu-item">
-                    <a href="index.html">Inicio</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="index.html">
+                        <h2>Inicio</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="./secciones/locales.html">Locales</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./secciones/locales.html">
+                        <h2>Locales</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="./secciones/Reserva.html">Reserva</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./secciones/Reserva.html">
+                        <h2>Reserva</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="./secciones/Contacto.html">Contacto</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./secciones/Contacto.html">
+                        <h2>Contacto</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="./secciones/Carta.html">Carta</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./secciones/Carta.html">
+                        <h2>Carta</h2>
+                    </a>
                 </div>
             </div>
         </div>
@@ -130,7 +140,7 @@
                 <div class="promo-imagen">
                     <img src="imagenes/promo.png" alt="imagen con graficos de tabla y torta">
                 </div>
-                <a href="#">click aqui para ganar millones</a>
+                <a href="#">Ir a la publicidad</a>
             </div>
         </div>
     </main>
