--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -45,20 +45,30 @@
         <!--         menu -->
         <div class="container">
             <div class="row menu">
-                <div class="col-sm-2 menu-item">
-                    <a href="../index.html">Inicio</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="../index.html">
+                        <h2>Inicio</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="locales.html">Locales</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./locales.html">
+                        <h2>Locales</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Reserva.html">Reserva</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./Reserva.html">
+                        <h2>Reserva</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Contacto.html">Contacto</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./Contacto.html">
+                        <h2>Contacto</h2>
+                    </a>
                 </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Carta.html">Carta</a>
+                <div class=" col-sm-2 menu-item enlace">
+                    <a href="./Carta.html">
+                        <h2>Carta</h2>
+                    </a>
                 </div>
             </div>
         </div>
