--- a/secciones/locales.html
+++ b/secciones/locales.html
@@ -42,25 +42,35 @@
             </div>
         </div>
 <!--menu -->
-        <div class="container">
-            <div class="row menu">
-                <div class="col-sm-2 menu-item">
-                    <a href="../index.html">Inicio</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="locales.html">Locales</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Reserva.html">Reserva</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Contacto.html">Contacto</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Carta.html">Carta</a>
-                </div>
-            </div>
+<div class="container">
+    <div class="row menu">
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="../index.html">
+                <h2>Inicio</h2>
+            </a>
         </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./locales.html">
+                <h2>Locales</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Reserva.html">
+                <h2>Reserva</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Contacto.html">
+                <h2>Contacto</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Carta.html">
+                <h2>Carta</h2>
+            </a>
+        </div>
+    </div>
+</div>
     </header>
 <!--inicio del main-->
     <main>
@@ -89,7 +99,7 @@
             <div class="col-sm-4 horarios ">
                 <div class="horarios-titulo"><h3>HORARIOS</h3></div>
                 <div class="horarios-dia"><h4>11:30 a 15:30 </h4></div>
-                <div class="horarios-noche"><h4>20:00 a 24:00 </h4></div>
+                <div class="horarios-noche"><h4>20:00 a 01:00 </h4></div>
             </div>
         </div>
     </main>
@@ -131,24 +141,18 @@
 <!-- seccion ubicaciones -->
 <section>
     <div class="container-fluid ubicaciones ">
-        <div class="row ubicaciones-titulo ">
+        <div class="container row ubicaciones-titulo ">
             <div class="col-sm-8 ">
-                <h2>Visitanos en nuestras sucursales ubicadas en:</h2>
+                <h2>Encontranos en:</h2>
             </div>
         </div>
         <div class="row col-sm-8 ubicaciones-contenedor">
             <div class="col-6 ubicaciones-primera">
-                <div class="ubicaciones-primera-direccion">
-                    <h2>Espejo 352</h2>
-                </div>
                 <div class="ubicaciones-primera-mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.3202972148306!2d-68.84669928523697!3d-32.88969882633679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e091b1b1996f5%3A0xcfa3c0b58f7e7c1!2sCentro%2C%20Capital%2C%20Mendoza!5e0!3m2!1ses-419!2sar!4v1629140182728!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <div class="col-6 ubicaciones-segunda">
-                <div class="ubicaciones-segunda-direccion">
-                    <h2>Pelegrini 441</h2>
-                </div>
                 <div class="ubicaciones-segunda-mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.926229532342!2d-68.84499798338504!3d-32.87367120907595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09371e05753d%3A0xbc8d7485c5764b57!2sParque%20Central!5e0!3m2!1ses-419!2sar!4v1629142886536!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
