--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -43,25 +43,35 @@
             </div>
         </div>
 <!--menu -->
-        <div class="container">
-            <div class="row menu">
-                <div class="col-sm-2 menu-item">
-                    <a href="../index.html">Inicio</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="locales.html">Locales</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Reserva.html">Reserva</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Contacto.html">Contacto</a>
-                </div>
-                <div class="col-sm-2 menu-item">
-                    <a href="Carta.html">Carta</a>
-                </div>
-            </div>
+<div class="container">
+    <div class="row menu">
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="../index.html">
+                <h2>Inicio</h2>
+            </a>
         </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./locales.html">
+                <h2>Locales</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Reserva.html">
+                <h2>Reserva</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Contacto.html">
+                <h2>Contacto</h2>
+            </a>
+        </div>
+        <div class=" col-sm-2 menu-item enlace">
+            <a href="./Carta.html">
+                <h2>Carta</h2>
+            </a>
+        </div>
+    </div>
+</div>
     </header>
 <!-- inicio del main -->
 <main>
